[gd_scene load_steps=7 format=3 uid="uid://b4jmtlckfoy46"]

[ext_resource type="Shader" uid="uid://btjpurw470nhn" path="res://scenes/UI/main_menu_ui.gdshader" id="1_b128e"]
[ext_resource type="Script" uid="uid://dglhkvype23u5" path="res://scripts/Hub/django_learnings_and_games.gd" id="1_xrl27"]
[ext_resource type="FontFile" uid="uid://hke21ckgccrf" path="res://textures/Fonts/superstar-memesbruh03/superstar_memesbruh03.ttf" id="2_xrl27"]

[sub_resource type="FastNoiseLite" id="FastNoiseLite_wgk5a"]
noise_type = 0
frequency = 0.3395

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_qq17d"]
noise = SubResource("FastNoiseLite_wgk5a")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_tdtw7"]
shader = ExtResource("1_b128e")
shader_parameter/resolution = Vector2(600, 400)
shader_parameter/noise_texture = SubResource("NoiseTexture2D_qq17d")
shader_parameter/density = 57.5
shader_parameter/speed_x = 100.0
shader_parameter/speed_y = 1.49012e-06
shader_parameter/layers = 10.0

[node name="DjangoLearningsAndGames" type="Control"]
process_mode = 2
layout_mode = 3
anchors_preset = 0
offset_right = 480.0
offset_bottom = 270.0
script = ExtResource("1_xrl27")

[node name="ShaderBackground" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_tdtw7")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 0
offset_left = 8.0
offset_top = 36.0
offset_right = 224.0
offset_bottom = 220.0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_xrl27")
text = "Select Book chapter"
horizontal_alignment = 1

[node name="Level1Button" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_xrl27")
text = "Setting Up Django"

[node name="Level2Button" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_xrl27")
text = "URLs,  Views, 
Templates and Static Files"

[node name="Level3Button" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_xrl27")
text = "Models, Database
and Admin Panel"

[node name="Level4Button" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_xrl27")
text = "Return to
Earth - Deployment
"

[node name="HSeparator" type="HSeparator" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="PanelContainer2" type="PanelContainer" parent="."]
layout_mode = 0
offset_left = 256.0
offset_top = 36.0
offset_right = 472.0
offset_bottom = 220.0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer2"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="PanelContainer2/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_xrl27")
text = "Select minigame to play"
horizontal_alignment = 1

[node name="Level1Button" type="Button" parent="PanelContainer2/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_xrl27")
text = "Setting Up Django"

[node name="Level2Button" type="Button" parent="PanelContainer2/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_xrl27")
text = "URLs,  Views, 
Templates and Static Files"

[node name="Level3Button" type="Button" parent="PanelContainer2/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_xrl27")
text = "Models, Database
and Admin Panel"

[node name="Level4Button" type="Button" parent="PanelContainer2/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_xrl27")
text = "Return to
Earth - Deployment
"

[node name="HSeparator" type="HSeparator" parent="PanelContainer2/VBoxContainer"]
layout_mode = 2

[node name="CloseButton" type="Button" parent="."]
layout_mode = 2
offset_left = 132.0
offset_top = 227.0
offset_right = 348.0
offset_bottom = 251.0
theme_override_fonts/font = ExtResource("2_xrl27")
text = "Close"

[node name="TitleLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 155.0
offset_top = 6.0
offset_right = 326.0
offset_bottom = 26.0
theme_override_fonts/font = ExtResource("2_xrl27")
theme_override_font_sizes/font_size = 19
text = "Django Learning hub"
horizontal_alignment = 1

[node name="UILayer" type="CanvasLayer" parent="."]
layer = 5
visible = false

[connection signal="pressed" from="CloseButton" to="." method="_on_close_button_pressed"]
